Fixed spacing on background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,20 @@
-body{
+html, body{
+
+    height: 100%;
+
+}
+
+.bg{
+
     background-image: url(../images/hw4background.jpg);
-    background-size: cover;
+
+    /* background-size: cover; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 
@@ -13,9 +26,8 @@ body{
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-
     max-width:960px;
-    /* max-height: 95vh; */
+    
 
 }
 
@@ -26,7 +38,7 @@ body{
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.6);
-    margin-top: 5vh;
+    margin-top: 3vh;
 }
 
 .instructions{
